test_scores/negative_dimers/features/P51159.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P51159.pkl.xz